# prompt-engine

./: AGENTS.md  ENVRIONMENT.md  HANDOVER.md  ONTOLOGY.md  TICKETS.md  assembler.py  compare_outputs.py  compile.py  compiler.py  index.html  main.py  output_formatter.py  pyproject.toml  server.py  setup.cfg  test_assembler.py  test_assembler_core.py  test_compiler.py  test_refactor.py
api/: main.py
data/: action_grammar.json  actions.json  affordance_types.json  atmosphere.json  attires.json  attribute_metadata.json  blueprints.json  camera.json  camera_profiles.json  composition.json  environments.json  lighting.json  personas.json  poses.json  render_profiles.json  rules.json  scene.json  spatial_prepositions.json  spatial_relationships.json  styles.json  subjects.json  templates.json  weather.json
data/grammar/: body.json  clothing.json  environment.json  fixtures.json  items.json
data/grammar/templates/: Bathtub.jinja2  BikiniTop.jinja2  BodySurface.jinja2  Camera.jinja2  Car.jinja2  CoffeeCup.jinja2  Dress.jinja2  Ears.jinja2  Environment.jinja2  Eyes.jinja2  Face.jinja2  Feet.jinja2  Fixture.jinja2  HalterTop.jinja2  Hands.jinja2  Hoodie.jinja2  Jaw.jinja2  Lighting.jinja2  LinenTop.jinja2  LowerBody.jinja2  Mirror.jinja2  Morphology.jinja2  Object.jinja2  Sandals.jinja2  SuitJacket.jinja2  Tree.jinja2  Tshirt.jinja2  Tusks.jinja2  UpperBody.jinja2  WizardRobe.jinja2  Zone.jinja2  full_plate_armor.jinja2
data/grammar/templates/actions/: dangling_feet.jinja2  dangling_feet_clause.jinja2  framing.jinja2  framing_clause.jinja2  holding.jinja2  holding_clause.jinja2  holding_drink.jinja2  holding_drink_clause.jinja2  holding_near_eye.jinja2  (+22 more)
data/primitives/: accessories.json  atmospheres.json  clothing.json  fixtures.json  hairstyles.json  items.json  morphologies.json
docs/: quickstart.md  schema.md
fe/: CLOTHING_CLOSET_MODAL.md  V3_IMPLEMENTATION.md  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
fe/app/: layout.tsx  page.tsx
fe/components/: CenterPanel.tsx  ClothingClosetModal.tsx  Footer.tsx  Header.tsx  LeftPanel.tsx  RightPanel.tsx
fe/lib/: mock-data.ts  scene-context.tsx  types.ts
field_compilers/: __init__.py  action.py  base.py  camera.py  clothing.py  environment.py  lighting.py  objects.py  style.py  subject.py
schemas/: scene.py
tests/: test_stress.py
