[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "prompt-engine"
version = "1.0.0"
description = "Compile structured scene facts into natural language prompts for AI image generators"
readme = "README.md"
authors = [
    {name = "Prompt Engine Contributors"},
]
license = {text = "MIT"}
keywords = ["prompt", "ai", "image-generation", "nlp", "compiler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/yourorg/prompt-engine"
Documentation = "https://github.com/yourorg/prompt-engine#readme"

[project.scripts]
prompt-engine = "compile:main"

[tool.setuptools.packages.find]
include = ["prompt_engine*", "schemas*", "api*"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
