[metadata]
name = prompt-engine
version = 1.0.0
description = Compile structured scene facts into natural language prompts for AI image generators
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourorg/prompt-engine
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.10
install_requires =
    jinja2>=3.0
    fastapi>=0.110
    uvicorn>=0.29
    pydantic>=2.0

[options.packages.find]
include =
    prompt_engine*

[options.entry_points]
console_scripts =
    prompt-engine = cli.compile:main
